--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,7 @@
 <body>
 <div class="container">
   <div class="wrap">
-    <section class="dashboard" data-page="1">
+    <section class="dashboard" data-page="2">
       <aside>
         <h1><a href="dashboard.html">SMART PRT LIFE</a></h1>
         <a href="" class="dir-shop"><img src="img/member/arrow-r.svg" alt=""></a>
@@ -178,7 +178,7 @@
       <article class="arti-cont inoculation">
         <div class="inner">
           <h3>접종정보</h3>
-          <div class="cont" data-view="1">
+          <div class="cont" data-view="2">
             <div class="profile-img">
               <img src="img/member/img_profile.png" alt="">
             </div>
@@ -298,100 +298,43 @@
 
 
               <!-- ##### 캘린더1 -->
-              <div class="cal-wrap">
-                <a class="cal-btn" id="preventMonth"><input type="button" id="preventMonth_Button" onclick="prevMonth()"></a>
-                <a class="cal-btn" id="nextMonth"><input type="button" id="nextMonth_Button" onclick="nextMonth()"></a>
-                <table id="calendar_table">
-                  <tr id="mainBar">
-                  </tr>
-                  <tr>
-                    <th>일</th>
-                    <th>월</th>
-                    <th>화</th>
-                    <th>수</th>
-                    <th>목</th>
-                    <th>금</th>
-                    <th>토</th>
-                  </tr>
-                </table>
+              <div class="calendar-wrap calendar-wrap1">
+                <div class="calendar">
+                  <div class="clicked-date">
+                    <div class="cal-day"></div>
+                    <div class="cal-date"></div>
+                  </div>
+                  <div class="calendar-box">
+                    <div class="ymd">
+                      <p class="y"><s></s>년</p>
+                      <p class="m"><s></s>월</p>
+                      <p class="d"><s></s>일</p>
+                    </div>
+                    <div class="ctr-box clearfix">
+                      <button type="button" title="prev" class="btn-cal1 prev">
+                      </button>
+                      <span class="cal-year"></span>
+                      <span class="cal-month"></span>
+                      <button type="button" title="next" class="btn-cal1 next">
+                      </button>
+                    </div>
+                    <table class="cal-table">
+                      <thead>
+                      <tr>
+                        <th>일</th>
+                        <th>월</th>
+                        <th>화</th>
+                        <th>수</th>
+                        <th>목</th>
+                        <th>금</th>
+                        <th>토</th>
+                      </tr>
+                      </thead>
+                      <tbody class="cal-body1"></tbody>
+                    </table>
+                  </div>
+                </div>
               </div>
-              <script>
-                let today = new Date();
-                let todayYear = today.getFullYear();
-                let todayMonth = today.getMonth() +1;
-                let calendar = document.getElementById("calendar_table");
-                function buildCalendar(){
-                  let firstDate = new Date(todayYear, todayMonth-1,1);
-                  let lastDate = new Date(todayYear, todayMonth,0);
-                  let day = firstDate.getDay();
-                  let week = Math.ceil(lastDate.getDate()/7) + 1;
-                  let today_yearMonth = todayYear + " - " + todayMonth;
-                  let leftDays = 7; // setDays 와 반비례
-                  let setDays = 1;// leftDays 와 반비례
-                  let nextMonthDate = 1;
-                  for(i = 1; i < week; i++){
-                    let row = calendar.insertRow();
-                    while(day != 0){
-                      row.insertCell().innerHTML = "";
-                      day -= 1;
-                      leftDays -= 1;
-                    } // 1주
-                    while(leftDays != 0){
-                      if(setDays > lastDate.getDate()){
-                        row.insertCell().innerHTML = nextMonthDate;
-                        leftDays -= 1;
-                        nextMonthDate += 1;
-                      }else{
-                        row.insertCell().innerHTML = setDays;
-                        setDays +=1;
-                        leftDays -= 1;
-                      }
-                    }
-                    leftDays = 7;
-                  }
-                  setDays -=1;
-                  if(setDays != lastDate.getDate()){
-                    let row = calendar.insertRow();
-                    while(setDays != lastDate.getDate()){
-                      setDays++;
-                      leftDays--;
-                      row.insertCell().innerHTML = setDays;
-                    }
-                    while(leftDays != 0){
-                      row.insertCell().innerHTML = nextMonthDate;
-                      nextMonthDate++;
-                      leftDays--;
-                    }
-                  }
-                  // document.getElementById("yearMonth").innerHTML= today_yearMonth;
-                }
-                buildCalendar();
-                function deleteCalendar(){
-                  while(calendar.rows.length > 2){
-                    calendar.deleteRow(2);
-                  }
-                }
-                function prevMonth(){
-                  todayMonth = todayMonth -1;
-                  if(todayMonth == 0){
-                    todayMonth = 12;
-                    todayYear -= 1;
-                  }
-                  deleteCalendar();
-                  today = new Date(todayYear,todayMonth-1);
-                  buildCalendar();
-                }
-                function nextMonth(){
-                  todayMonth +=1;
-                  if(todayMonth == 13){
-                    todayMonth = 1;
-                    todayYear = todayYear +1;
-                  }
-                  deleteCalendar();
-                  today = new Date(todayYear,todayMonth - 1);
-                  buildCalendar();
-                }
-              </script>
             </div>
 
             <!-- ##### 진료기록-->
@@ -1729,15 +1672,15 @@
     }
   }
   //다음달로 넘어가기
-  swiperNext.addEventListener('click', function() {
-    loadYYMM((init.nextMonth()));
-    petList();
-  });
-  //이전달로 넘어가기
-  swiperPrev.addEventListener('click', function() {
-    loadYYMM((init.prevMonth()))
-    petList();
-  });
+  // swiperNext.addEventListener('click', function() {
+  //   loadYYMM((init.nextMonth()));
+  //   petList();
+  // });
+  // //이전달로 넘어가기
+  // swiperPrev.addEventListener('click', function() {
+  //   loadYYMM((init.prevMonth()))
+  //   petList();
+  // });
   petList();
 
   let dataView = document.querySelector('.inoculation .cont');
