--- a/dashboard.html
+++ b/dashboard.html
@@ -123,33 +123,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="swiper-slide">
-                  <p class="month">2022년 2월</p>
-                  <ul class="ul-list">
-                    <li>
-                      <div class="thumb"><img src="img/member/img_petlist_2.png" alt=""></div>
-                      <div class="txt-wrap">
-                        <p class="tit">심장사상충 예방약 급여</p>
-                        <p class="txt">2월 4일 금요일 오후 1시 신세계동물병원</p>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-                <div class="swiper-slide">
-                  <p class="month">2022년 2월</p>
-                  <ul class="ul-list">
-                    <li>
-                      <div class="thumb"><img src="img/member/img_petlist_2.png" alt=""></div>
-                      <div class="txt-wrap">
-                        <p class="tit">심장사상충 예방약 급여</p>
-                        <p class="txt">2월 4일 금요일 오후 1시 신세계동물병원</p>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
               </div>
-              <div class="swiper-btn swiper-button-prev"></div>
-              <div class="swiper-btn swiper-button-next"></div>
             </div>
           </div>
         </div>
@@ -1043,76 +1017,6 @@
             <div class="sch-list">
               <ul class="ul-list">
                 <!-- pet-a 부터 pet-j까지 열마리 애완동물 구분 함 -->
-                <li class="pet-a">
-                  <div class="thumb"><img src="img/member/img_petlist_2.png" alt=""></div>
-                  <div class="txt-wrap">
-                    <p class="tit">심장사상충 예방약 급여</p>
-                    <p class="txt">2월 4일 금요일 오후 1시 신세계동물병원</p>
-                  </div>
-                </li>
-                <li class="pet-b">
-                  <div class="thumb"><img src="img/member/mask2.png" alt=""></div>
-                  <div class="txt-wrap">
-                    <p class="tit">심장사상충 예방약 급여</p>
-                    <p class="txt">2월 4일 금요일 오후 1시 신세계동물병원</p>
-                  </div>
-                </li>
-                <li class="pet-c">
-                  <div class="thumb"><img src="img/member/mask3.png" alt=""></div>
-                  <div class="txt-wrap">
-                    <p class="tit">심장사상충 예방약 급여</p>
-                    <p class="txt">2월 4일 금요일 오후 1시 신세계동물병원</p>
-                  </div>
-                </li>
-                <li class="pet-d">
-                  <div class="thumb"><img src="img/member/mask3.png" alt=""></div>
-                  <div class="txt-wrap">
-                    <p class="tit">심장사상충 예방약 급여</p>
-                    <p class="txt">2월 4일 금요일 오후 1시 신세계동물병원</p>
-                  </div>
-                </li>
-                <li class="pet-e">
-                  <div class="thumb"><img src="img/member/mask3.png" alt=""></div>
-                  <div class="txt-wrap">
-                    <p class="tit">심장사상충 예방약 급여</p>
-                    <p class="txt">2월 4일 금요일 오후 1시 신세계동물병원</p>
-                  </div>
-                </li>
-                <li class="pet-f">
-                  <div class="thumb"><img src="img/member/mask3.png" alt=""></div>
-                  <div class="txt-wrap">
-                    <p class="tit">심장사상충 예방약 급여</p>
-                    <p class="txt">2월 4일 금요일 오후 1시 신세계동물병원</p>
-                  </div>
-                </li>
-                <li class="pet-g">
-                  <div class="thumb"><img src="img/member/mask3.png" alt=""></div>
-                  <div class="txt-wrap">
-                    <p class="tit">심장사상충 예방약 급여</p>
-                    <p class="txt">2월 4일 금요일 오후 1시 신세계동물병원</p>
-                  </div>
-                </li>
-                <li class="pet-h">
-                  <div class="thumb"><img src="img/member/mask3.png" alt=""></div>
-                  <div class="txt-wrap">
-                    <p class="tit">심장사상충 예방약 급여</p>
-                    <p class="txt">2월 4일 금요일 오후 1시 신세계동물병원</p>
-                  </div>
-                </li>
-                <li class="pet-i">
-                  <div class="thumb"><img src="img/member/mask3.png" alt=""></div>
-                  <div class="txt-wrap">
-                    <p class="tit">심장사상충 예방약 급여</p>
-                    <p class="txt">2월 4일 금요일 오후 1시 신세계동물병원</p>
-                  </div>
-                </li>
-                <li class="pet-j">
-                  <div class="thumb"><img src="img/member/mask3.png" alt=""></div>
-                  <div class="txt-wrap">
-                    <p class="tit">심장사상충 예방약 급여</p>
-                    <p class="txt">2월 4일 금요일 오후 1시 신세계동물병원</p>
-                  </div>
-                </li>
               </ul>
             </div>
           </div>
@@ -1373,13 +1277,13 @@
     dashboard.classList.remove('aside-open');
   }
 
-  const swiper1 = new Swiper('.swiper1', {
-    slidesPerView: 1,
-    navigation: {
-      nextEl: '.swiper-button-next',
-      prevEl: '.swiper-button-prev',
-    },
-  });
+  // const swiper1 = new Swiper('.swiper1', {
+  //   slidesPerView: 1,
+  //   navigation: {
+  //     nextEl: '.swiper-button-next',
+  //     prevEl: '.swiper-button-prev',
+  //   },
+  // });
 
   $(function() {
     new ResizeSensor($("article"), function(size){
@@ -1417,10 +1321,20 @@
 
 
   // 캘린더에 들어가는 데이터 형태
-  var month1Dots = [{ ymd: '20220523', price: '50,000' }, { ymd: '20220521', price: '800,000' }, { ymd: '20220530', price: '800,000' }];
+  var month1Dots = [{ ymd: '20220523', price: '50,000' }, { ymd: '20220521', price: '800,000' }, { ymd: '20220530', price: '800,000' }, { ymd: '20220630', price: '800,000' }];
 
   // 캘린더 2 데이터 애완동물 구분 pet-a ~ pet-j 까지
-  var month2Dots = [{ ymd: '20220503', pet: 'pet-f' },{ ymd: '20220505', pet: 'pet-a' },{ ymd: '20220505', pet: 'pet-b' },{ ymd: '20220510', pet: 'pet-j' },{ ymd: '20220510', pet: 'pet-a' },{ ymd: '20220510', pet: 'pet-i' }, { ymd: '20220521', pet: 'pet-b' }, { ymd: '20220521', pet: 'pet-c' }];
+  var month2Dots = [
+    { ymd: '20220503', pet: 'pet-f', tit:'심장사상충 예방약 급여', txt:'5월 4일 금요일 오후 1시 신세계동물병원', src:'img/member/img_petlist_1.png' },
+    { ymd: '20220505', pet: 'pet-a', tit:'심장사상충 예방약 급여', txt:'5월 4일 금요일 오후 1시 신세계동물병원', src:'img/member/img_petlist_2.png' },
+    { ymd: '20220505', pet: 'pet-b', tit:'심장사상충 예방약 급여', txt:'5월 4일 금요일 오후 1시 신세계동물병원', src:'img/member/mask3.png' },
+    { ymd: '20220510', pet: 'pet-j', tit:'심장사상충 예방약 급여', txt:'5월 4일 금요일 오후 1시 신세계동물병원', src:'img/member/img_petlist_1.png' },
+    { ymd: '20220510', pet: 'pet-a', tit:'심장사상충 예방약 급여', txt:'5월 4일 금요일 오후 1시 신세계동물병원', src:'img/member/img_petlist_2.png' },
+    { ymd: '20220510', pet: 'pet-i', tit:'심장사상충 예방약 급여', txt:'5월 4일 금요일 오후 1시 신세계동물병원', src:'img/member/mask3.png' },
+    { ymd: '20220521', pet: 'pet-b', tit:'심장사상충 예방약 급여', txt:'5월 4일 금요일 오후 1시 신세계동물병원', src:'img/member/img_petlist_1.png' },
+    { ymd: '20220521', pet: 'pet-c', tit:'심장사상충 예방약 급여', txt:'5월 4일 금요일 오후 1시 신세계동물병원', src:'img/member/img_petlist_2.png' },
+    { ymd: '20220621', pet: 'pet-c', tit:'심장사상충 예방약 급여', txt:'6월 5일 금요일 오후 1시 신세계동물병원', src:'img/member/img_petlist_2.png' }
+  ];
 
 
 
@@ -1497,17 +1411,48 @@
 
 
   // 캘린더2
+  let ulList = document.querySelector('.schedule .ul-list');
   var cal2 = new DCalendar(function(yyyy, mm, tbody) {
     document.querySelector('.month2 tbody').innerHTML = tbody;
+    let rendData = month2Dots.filter(function(list) { return list.ymd.includes(yyyy+mm) });
+    recorder(rendData);
   }, function(ymd){
-    console.log(ymd);
+    selectDay(ymd);
+    let data = month2Dots.filter(function(list) { return list.ymd === ymd });
+    recorder(data);
   }, function(ymd) {
-    return month2Dots.filter(function(dot) { return dot.ymd === ymd }).map(function(dot) { return '<i class="'+ dot.pet +'"></i>' } ).join('')
+    return month2Dots.filter(function(dot) { return dot.ymd === ymd }).map(function(dot) { return '<i class="'+ dot.pet +'"></i>' } ).join('');
   });
 
-  let tDayMark = document.querySelector('.calendar-wrap2 .d-'+tDay);
-  tDayMark.classList.add('active-day');
 
+  // 오늘날짜에 active 넣기
+  let tDayMark = document.querySelector('.calendar-wrap2 .d-'+tDay);
+  // tDayMark.classList.add('active-day');
+
+  function selectDay(v) {
+    let days = document.querySelectorAll('.calendar-wrap2 .day')
+    for (let i = 0; i < days.length; i++) {
+      days[i].classList.remove('active-day');
+    }
+    let sDay = document.querySelector('.calendar-wrap2 .d-'+v)
+    sDay.classList.add('active-day');
+  }
+
+
+  // 이달의 일정에 데이터 뿌리기
+  function recorder(obj) {
+    let htmlCnt = '';
+    for (let i = 0; i < obj.length; i++) {
+      htmlCnt += '<li class="'+obj[i].pet+'">\n' +
+        '                   <div class="thumb"><img src="'+obj[i].src+'" alt=""></div>\n' +
+        '                   <div class="txt-wrap">\n' +
+        '                     <p class="tit">'+obj[i].tit+'</p>\n' +
+        '                     <p class="txt">'+obj[i].txt+'</p>\n' +
+        '                   </div>\n' +
+        '                 </li>'
+    }
+    ulList.innerHTML = htmlCnt;
+  }
 
   function cal2Change(v) {
     if(v === 'prev') {
@@ -1542,12 +1487,13 @@
     })
   });
 
+  // 메뉴바 프로필 클릭시 메뉴바확장
   let petDetails = document.querySelectorAll('.pet-detail');
   let inoculation = document.querySelector('.inoculation');
   Array.prototype.forEach.call(petDetails, function(e) {
     e.addEventListener('click', function() {
       dashboard.setAttribute('data-page','2');
-      asideOpen();
+      // asideOpen();
     })
   });
 
@@ -1559,10 +1505,10 @@
       pageNum = idx;
       if(idx <= 5) {
         dashboard.setAttribute('data-page', idx);
-        asideOpen();
+        // asideOpen();
       } else {
         popup.classList.add('p-open', 'pet-pop-open');
-        asideOpen();  
+        // asideOpen();
       }
     })
   });
