--- a/dashboard.html
+++ b/dashboard.html
@@ -756,34 +756,29 @@
                 <div class="review-inner">
                   <p class="t-tit">항목별 평균 별점</p>
                   <p class="sub-tit">다른분들에게 추천하시겠어요?</p>
-                  <div class="star">
-                    ★★★★★
-                    <span>★★★★★</span>
-                    <input type="range" oninput="drawStar(this)" value="1" step="2" min="0" max="10">
+
+
+                  <!--####### star 클래스에 one, two, three, four에 따라 별 갯수 지정됨-->
+                  <div class="star one">
+                    <s>★</s><s>★</s><s>★</s><s>★</s><s>★</s>
                   </div>
                   <div class="num"><i>1</i><i>2</i><i>3</i><i>4</i><i>5</i></div>
 
                   <p class="sub-tit">서비스 만족도</p>
-                  <div class="star">
-                    ★★★★★
-                    <span>★★★★★</span>
-                    <input type="range" oninput="drawStar(this)" value="1" step="2" min="0" max="10">
+                  <div class="star two">
+                    <s>★</s><s>★</s><s>★</s><s>★</s><s>★</s>
                   </div>
                   <div class="num"><i>1</i><i>2</i><i>3</i><i>4</i><i>5</i></div>
 
                   <p class="sub-tit">가격 만족도</p>
-                  <div class="star">
-                    ★★★★★
-                    <span>★★★★★</span>
-                    <input type="range" oninput="drawStar(this)" value="1" step="2" min="0" max="10">
+                  <div class="star three">
+                    <s>★</s><s>★</s><s>★</s><s>★</s><s>★</s>
                   </div>
                   <div class="num"><i>1</i><i>2</i><i>3</i><i>4</i><i>5</i></div>
 
                   <p class="sub-tit">시설 만족도</p>
-                  <div class="star">
-                    ★★★★★
-                    <span>★★★★★</span>
-                    <input type="range" oninput="drawStar(this)" value="1" step="2" min="0" max="10">
+                  <div class="star four">
+                    <s>★</s><s>★</s><s>★</s><s>★</s><s>★</s>
                   </div>
                   <div class="num"><i>1</i><i>2</i><i>3</i><i>4</i><i>5</i></div>
                 </div>
@@ -1104,7 +1099,10 @@
       <div class="view-map">
         <div id="map"></div>
       </div>
-      <div class="swiper swiper-pop">
+
+
+      <!--###조회 정보 없으면 swiper 에 non-li클래스-->
+      <div class="swiper swiper-pop non-li">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <ul>
@@ -1157,6 +1155,9 @@
                 </div>
               </li>
             </ul>
+          </div>
+          <div class="swiper-slide">
+            <p>약국 정보가 없습니다.</p>
           </div>
         </div>
         <div class="swiper-pop-btn swiper-button-prev"></div>
@@ -1219,35 +1220,41 @@
 
     <!--####내 반려동물 선택-->
     <div class="detail-pop-inner">
-      <p class="tit">표준 진료 내역</p>
-      <p class="t-txt">진료비가 합리적인<br> <b>표준진료</b>를 안내해 드립니다.</p>
+      <p class="tit">세부내역</p>
       <p class="noti">※ 데이터 내용에 대한 정보 저작권은 더블렌드(주) 소유로 임의로 사용, 복제할 수 없습니다. </p>
-      <p class="total sub-tit">종합백신 <s class="price">100,000</s></p>
-      <ul class="togg-li">
-        <li>
-          <a class="sub-tit">1차 <s class="price">5,000</s></a>
-        </li>
-        <li>
-          <a class="sub-tit">캔넬코프 <span></span><s class="price">5,000</s></a>
-          <p class="txt">신체검사, 심장사상충검사, 혈구검사(빈혈, 염증), 혈청검사(간, 신장등), 흉부엑스레이, 종합뇨검사, 복부초음파</p>
-        </li>
-        <li>
-          <p class="sub-tit">2차 <s class="price">5,000</s></p>
-        </li>
-        <li>
-          <p class="sub-tit">1차 <s class="price">5,000</s></p>
-        </li>
-        <li>
-          <a class="sub-tit">캔넬코프 <span></span><s class="price">5,000</s></a>
-          <p class="txt">신체검사, 심장사상충검사, 혈구검사(빈혈, 염증), 혈청검사(간, 신장등), 흉부엑스레이, 종합뇨검사, 복부초음파</p>
-        </li>
-        <li>
-          <p class="sub-tit">종합백신 <s class="price">5,000</s></p>
-        </li>
-        <li>
-          <p class="sub-tit">인플루엔자 <s class="price">5,000</s></p>
-        </li>
-      </ul>
+      <div class="de-wrap">
+        <p class="total sub-tit">종합백신 <s class="price">100,000</s></p>
+        <ul class="togg-li">
+          <li>
+            <a class="sub-tit">1차 <s class="price">5,000</s></a>
+          </li>
+          <li>
+            <a class="sub-tit">캔넬코프 <span></span><s class="price">5,000</s></a>
+            <p class="txt">신체검사, 심장사상충검사, 혈구검사(빈혈, 염증), 혈청검사(간, 신장등), 흉부엑스레이, 종합뇨검사, 복부초음파</p>
+          </li>
+          <li>
+            <p class="sub-tit">2차 <s class="price">5,000</s></p>
+          </li>
+          <li>
+            <p class="sub-tit">1차 <s class="price">5,000</s></p>
+          </li>
+          <li>
+            <a class="sub-tit">캔넬코프 <span></span><s class="price">5,000</s></a>
+            <p class="txt">신체검사, 심장사상충검사, 혈구검사(빈혈, 염증), 혈청검사(간, 신장등), 흉부엑스레이, 종합뇨검사, 복부초음파</p>
+          </li>
+          <li>
+            <p class="sub-tit">종합백신 <s class="price">5,000</s></p>
+          </li>
+          <li>
+            <p class="sub-tit">인플루엔자 <s class="price">5,000</s></p>
+          </li>
+        </ul>
+        <div class="notice">
+          본 진료내역은 더블렌드의 표준진료 알고리즘의 결과로
+          반려동물의 상태나 추가적인 검사, 처방 등에 따라 금액 차이가
+          발생할 수 있습니다.
+        </div>
+      </div>
     </div>
 
     <a class="close">닫기</a>
@@ -1318,8 +1325,6 @@
     },
   });
 
-
-
   // 캘린더에 들어가는 데이터 형태
   var month1Dots = [{ ymd: '20220523', price: '50,000' }, { ymd: '20220521', price: '800,000' }, { ymd: '20220530', price: '800,000' }, { ymd: '20220630', price: '800,000' }];
 
@@ -1335,9 +1340,6 @@
     { ymd: '20220521', pet: 'pet-c', tit:'심장사상충 예방약 급여', txt:'5월 4일 금요일 오후 1시 신세계동물병원', src:'img/member/img_petlist_2.png' },
     { ymd: '20220621', pet: 'pet-c', tit:'심장사상충 예방약 급여', txt:'6월 5일 금요일 오후 1시 신세계동물병원', src:'img/member/img_petlist_2.png' }
   ];
-
-
-
 
   var cal1 = new DCalendar(function(yyyy, mm, tbody) {
     document.querySelector('tbody.month1').innerHTML = tbody;
@@ -1409,7 +1411,6 @@
     graphNowMonth = sIdx;
   }
 
-
   // 캘린더2
   let ulList = document.querySelector('.schedule .ul-list');
   var cal2 = new DCalendar(function(yyyy, mm, tbody) {
@@ -1424,7 +1425,6 @@
     return month2Dots.filter(function(dot) { return dot.ymd === ymd }).map(function(dot) { return '<i class="'+ dot.pet +'"></i>' } ).join('');
   });
 
-
   // 오늘날짜에 active 넣기
   let tDayMark = document.querySelector('.calendar-wrap2 .d-'+tDay);
   // tDayMark.classList.add('active-day');
@@ -1437,7 +1437,6 @@
     let sDay = document.querySelector('.calendar-wrap2 .d-'+v)
     sDay.classList.add('active-day');
   }
-
 
   // 이달의 일정에 데이터 뿌리기
   function recorder(obj) {
@@ -1476,7 +1475,6 @@
     cal2.setMonth(sVal, sIdx);
     cal2NowMonth = sIdx;
   }
-
 
   let dataView = document.querySelector('.inoculation .cont');
   let tabs = document.querySelectorAll('.inoculation .tab');
@@ -1548,10 +1546,12 @@
       cell.setAttribute('data-hos-view', idx);
     })
   });
-  function drawStar(target) {
-    let starSpan = target.parentNode.childNodes[1];
-    starSpan.style.width = target.value * 10 + '%';
-  }
+
+  // 별점리뷰
+  // function drawStar(target) {
+  //   let starSpan = target.parentNode.childNodes[1];
+  //   starSpan.style.width = target.value * 10 + '%';
+  // }
 
   function selectAll(v) {
     let chkboxs = document.querySelectorAll('.hos-pharm input');
