스마트펫 수정

--- a/dashboard.html
+++ b/dashboard.html
@@ -1102,7 +1102,7 @@
 
 
       <!--###조회 정보 없으면 swiper 에 non-li클래스-->
-      <div class="swiper swiper-pop non-li">
+      <div class="swiper swiper-pop">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <ul>
