쇼핑몰 수정완료

--- a/shop/shop.html
+++ b/shop/shop.html
@@ -15,7 +15,7 @@
     <div class="wrap">
       <header>
         <div class="h-inner">
-          <h1><a href="">SMART PET LIFE</a></h1>
+          <h1><a href="main.html">SMART PET LIFE</a></h1>
           <p class="my-point">P182,900</p>
           <a class="menu">메뉴</a>
         </div>
@@ -25,6 +25,7 @@
           <a href="cart.html" class="menu-item">Cart</a>
           <a href="myOrder.html" class="menu-item">My Order</a>
         </div>
+        <div class="dim"></div>
       </header>
 
 
