--- a/shop/main.html
+++ b/shop/main.html
@@ -16,7 +16,7 @@
     <div class="wrap">
       <header>
         <div class="h-inner">
-          <h1><a href="">SMART PET LIFE</a></h1>
+          <h1><a href="main.html">SMART PET LIFE</a></h1>
           <p class="my-point">P182,900</p>
           <a class="menu">메뉴</a>
         </div>
@@ -26,6 +26,7 @@
           <a href="cart.html" class="menu-item">Cart</a>
           <a href="myOrder.html" class="menu-item">My Order</a>
         </div>
+        <div class="dim"></div>
       </header>
       <section>
         <article class="top">
