--- a/shop/faq.html
+++ b/shop/faq.html
@@ -25,7 +25,7 @@
           <a href="cart.html" class="menu-item">Cart</a>
           <a href="myOrder.html" class="menu-item">My Order</a>
           <a href="faq.html" class="menu-item active">FAQ</a>
-          <a href="myOrder.html" class="menu-item">1:1</a>
+          <a href="contact.html" class="menu-item">1:1</a>
         </div>
         <div class="dim"></div>
       </header>
